# Controller/CatalogController.php
@@ -16,7 +16,7 @@
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * The version of the OpenAPI document: 1.0.0
- * 
+ *
  * Generated by: https://github.com/openapitools/openapi-generator.git
  *
  */
@@ -189,18 +189,20 @@ class CatalogController extends Controller
     }
 
     /**
-     * Operation catalogIdPatch
+     * Operation catalogIdPost
      *
      * @param Request $request The Symfony request to handle.
      * @return Response The Symfony response.
      */
-    public function catalogIdPatchAction(Request $request, $id)
+    public function catalogIdPostAction(Request $request, $id)
     {
-        // Make sure that the client is providing something that we can consume
-        $consumes = ['application/json'];
-        if (!static::isContentTypeAllowed($request, $consumes)) {
-            // We can't consume the content that the client is sending us
-            return new Response('', 415);
+        // Figure out what data format to return to the client
+        $produces = ['application/json'];
+        // Figure out what the client accepts
+        $clientAccepts = $request->headers->has('Accept')?$request->headers->get('Accept'):'*/*';
+        $responseFormat = $this->getOutputFormat($clientAccepts, $produces);
+        if ($responseFormat === null) {
+            return new Response('', 406);
         }
 
         // Handle authentication
@@ -209,15 +211,35 @@ class CatalogController extends Controller
         $securitybearerAuth = $request->headers->get('authorization');
 
         // Read out all input parameter values into variables
-        $lotDetail = $request->getContent();
+        $manufacturer = $request->request->get('manufacturer');
+        $model = $request->request->get('model');
+        $year = $request->request->get('year');
+        $price = $request->request->get('price');
+        $mileage = $request->request->get('mileage');
+        $engineVolume = $request->request->get('engineVolume');
+        $color = $request->request->get('color');
+        $transmission = $request->request->get('transmission');
+        $drive = $request->request->get('drive');
+        $bodyNumber = $request->request->get('bodyNumber');
+        $deletedImages = $request->request->get('deletedImages');
+        $newImages = $request->files->get('newImages');
 
         // Use the default value if no value was provided
 
         // Deserialize the input values that needs it
         try {
             $id = $this->deserialize($id, 'int', 'string');
-            $inputFormat = $request->getMimeType($request->getContentTypeFormat());
-            $lotDetail = $this->deserialize($lotDetail, 'OpenAPI\Server\Model\LotDetail', $inputFormat);
+            $manufacturer = $this->deserialize($manufacturer, 'string', 'string');
+            $model = $this->deserialize($model, 'string', 'string');
+            $year = $this->deserialize($year, 'int', 'string');
+            $price = $this->deserialize($price, 'float', 'string');
+            $mileage = $this->deserialize($mileage, 'int', 'string');
+            $engineVolume = $this->deserialize($engineVolume, 'float', 'string');
+            $color = $this->deserialize($color, 'string', 'string');
+            $transmission = $this->deserialize($transmission, 'string', 'string');
+            $drive = $this->deserialize($drive, 'string', 'string');
+            $bodyNumber = $this->deserialize($bodyNumber, 'string', 'string');
+            $deletedImages = $this->deserialize($deletedImages, 'array<csv,string>', 'string');
         } catch (SerializerRuntimeException $exception) {
             return $this->createBadRequestResponse($exception->getMessage());
         }
@@ -231,10 +253,80 @@ class CatalogController extends Controller
             return $response;
         }
         $asserts = [];
-        $asserts[] = new Assert\NotNull();
-        $asserts[] = new Assert\Type("OpenAPI\Server\Model\LotDetail");
+        $asserts[] = new Assert\Type("string");
+        $response = $this->validate($manufacturer, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("string");
+        $response = $this->validate($model, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("int");
+        $response = $this->validate($year, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("float");
+        $response = $this->validate($price, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("int");
+        $response = $this->validate($mileage, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("float");
+        $response = $this->validate($engineVolume, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("string");
+        $response = $this->validate($color, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("string");
+        $response = $this->validate($transmission, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("string");
+        $response = $this->validate($drive, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("string");
+        $response = $this->validate($bodyNumber, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\All([
+            new Assert\Type("string"),
+        ]);
         $asserts[] = new Assert\Valid();
-        $response = $this->validate($lotDetail, $asserts);
+        $response = $this->validate($deletedImages, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\All([
+            new Assert\Type("Symfony\Component\HttpFoundation\File\UploadedFile"),
+        ]);
+        $asserts[] = new Assert\Valid();
+        $response = $this->validate($newImages, $asserts);
         if ($response instanceof Response) {
             return $response;
         }
@@ -247,10 +339,10 @@ class CatalogController extends Controller
             $handler->setbearerAuth($securitybearerAuth);
 
             // Make the call to the business logic
-            $responseCode = 204;
+            $responseCode = 200;
             $responseHeaders = [];
 
-            $handler->catalogIdPatch($id, $lotDetail, $responseCode, $responseHeaders);
+            $result = $handler->catalogIdPost($id, $manufacturer, $model, $year, $price, $mileage, $engineVolume, $color, $transmission, $drive, $bodyNumber, $deletedImages, $newImages, $responseCode, $responseHeaders);
 
             $message = match($responseCode) {
                 200 => 'данные машины изменены',
@@ -258,11 +350,12 @@ class CatalogController extends Controller
             };
 
             return new Response(
-                '',
+                $result !== null ?$this->serialize($result, $responseFormat):'',
                 $responseCode,
                 array_merge(
                     $responseHeaders,
                     [
+                        'Content-Type' => $responseFormat,
                         'X-OpenAPI-Message' => $message
                     ]
                 )
@@ -280,11 +373,13 @@ class CatalogController extends Controller
      */
     public function catalogPostAction(Request $request)
     {
-        // Make sure that the client is providing something that we can consume
-        $consumes = ['application/json'];
-        if (!static::isContentTypeAllowed($request, $consumes)) {
-            // We can't consume the content that the client is sending us
-            return new Response('', 415);
+        // Figure out what data format to return to the client
+        $produces = ['application/json'];
+        // Figure out what the client accepts
+        $clientAccepts = $request->headers->has('Accept')?$request->headers->get('Accept'):'*/*';
+        $responseFormat = $this->getOutputFormat($clientAccepts, $produces);
+        if ($responseFormat === null) {
+            return new Response('', 406);
         }
 
         // Handle authentication
@@ -293,24 +388,103 @@ class CatalogController extends Controller
         $securitybearerAuth = $request->headers->get('authorization');
 
         // Read out all input parameter values into variables
-        $lotDetail = $request->getContent();
+        $manufacturer = $request->request->get('manufacturer');
+        $model = $request->request->get('model');
+        $year = $request->request->get('year');
+        $price = $request->request->get('price');
+        $mileage = $request->request->get('mileage');
+        $engineVolume = $request->request->get('engineVolume');
+        $color = $request->request->get('color');
+        $transmission = $request->request->get('transmission');
+        $drive = $request->request->get('drive');
+        $bodyNumber = $request->request->get('bodyNumber');
+        $images = $request->files->get('images');
 
         // Use the default value if no value was provided
 
         // Deserialize the input values that needs it
         try {
-            $inputFormat = $request->getMimeType($request->getContentTypeFormat());
-            $lotDetail = $this->deserialize($lotDetail, 'OpenAPI\Server\Model\LotDetail', $inputFormat);
+            $manufacturer = $this->deserialize($manufacturer, 'string', 'string');
+            $model = $this->deserialize($model, 'string', 'string');
+            $year = $this->deserialize($year, 'int', 'string');
+            $price = $this->deserialize($price, 'float', 'string');
+            $mileage = $this->deserialize($mileage, 'int', 'string');
+            $engineVolume = $this->deserialize($engineVolume, 'float', 'string');
+            $color = $this->deserialize($color, 'string', 'string');
+            $transmission = $this->deserialize($transmission, 'string', 'string');
+            $drive = $this->deserialize($drive, 'string', 'string');
+            $bodyNumber = $this->deserialize($bodyNumber, 'string', 'string');
         } catch (SerializerRuntimeException $exception) {
             return $this->createBadRequestResponse($exception->getMessage());
         }
 
         // Validate the input values
         $asserts = [];
-        $asserts[] = new Assert\NotNull();
-        $asserts[] = new Assert\Type("OpenAPI\Server\Model\LotDetail");
+        $asserts[] = new Assert\Type("string");
+        $response = $this->validate($manufacturer, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("string");
+        $response = $this->validate($model, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("int");
+        $response = $this->validate($year, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("float");
+        $response = $this->validate($price, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("int");
+        $response = $this->validate($mileage, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("float");
+        $response = $this->validate($engineVolume, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("string");
+        $response = $this->validate($color, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("string");
+        $response = $this->validate($transmission, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("string");
+        $response = $this->validate($drive, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\Type("string");
+        $response = $this->validate($bodyNumber, $asserts);
+        if ($response instanceof Response) {
+            return $response;
+        }
+        $asserts = [];
+        $asserts[] = new Assert\All([
+            new Assert\Type("Symfony\Component\HttpFoundation\File\UploadedFile"),
+        ]);
         $asserts[] = new Assert\Valid();
-        $response = $this->validate($lotDetail, $asserts);
+        $response = $this->validate($images, $asserts);
         if ($response instanceof Response) {
             return $response;
         }
@@ -323,10 +497,10 @@ class CatalogController extends Controller
             $handler->setbearerAuth($securitybearerAuth);
 
             // Make the call to the business logic
-            $responseCode = 204;
+            $responseCode = 200;
             $responseHeaders = [];
 
-            $handler->catalogPost($lotDetail, $responseCode, $responseHeaders);
+            $result = $handler->catalogPost($manufacturer, $model, $year, $price, $mileage, $engineVolume, $color, $transmission, $drive, $bodyNumber, $images, $responseCode, $responseHeaders);
 
             $message = match($responseCode) {
                 201 => 'машина добавлена',
@@ -334,11 +508,12 @@ class CatalogController extends Controller
             };
 
             return new Response(
-                '',
+                $result !== null ?$this->serialize($result, $responseFormat):'',
                 $responseCode,
                 array_merge(
                     $responseHeaders,
                     [
+                        'Content-Type' => $responseFormat,
                         'X-OpenAPI-Message' => $message
                     ]
                 )
